--- a/source/css/styles.scss
+++ b/source/css/styles.scss
@@ -15,6 +15,7 @@
     //Button
     --button-color-green: hsl(140, 49%, 48%);
     --button-color-green-hover: hsl(100, 49%, 48%);
+    --button-color-red: hsl(0, 49%, 48%);
    
 }
 
@@ -111,7 +112,7 @@ header {
 
         .overview-header__element--title {
             font-size: 11rem;
-            color: 
+            color: var(--secondary-text-color);
         }
 
         .overview-header__element--value {
@@ -121,7 +122,7 @@ header {
 
         .overview-header__element--trend {
             font-size: 11rem;
-            color: hsl(133, 49%, 48%);
+            color: var(--button-color-green);
         }
 
         &:hover {
@@ -207,7 +208,7 @@ header {
         border-radius: 15px 15px 0 0;
 
         .arduino-element--header-element-button-delete {
-            background-color: hsl(0, 82%, 56%);
+            background-color: var(--button-color-red);
         }
 
     }
@@ -222,8 +223,6 @@ header {
 
         border-radius: 0 0 15px 15px;
     }    
-
-
 }
 
 //Hiermit wird der Hintergrund grau, sobald das Menü zum hinzufügen eines neuen Arduino geöffnet wird
@@ -288,8 +287,7 @@ header {
 
                 p {
                     font-size: 20rem;
-                    color: hsl(133, 49%, 48%);
-
+                    color: var(--button-color-green);
                 }
 
                 button {
@@ -306,7 +304,7 @@ header {
 
                 button {
                     width: 130px !important;
-                    background-color: hsl(133, 49%, 48%);
+                    background-color: var(--body-background-color);
                 }
             }
         }
