--- a/source/css/styles.css
+++ b/source/css/styles.css
@@ -1,13 +1,6 @@
 :root {
-  --root-font-size: 1px;
-  --body-background-color: hsl(225, 39%, 12%);
-  --primary-text-color: hsl(0, 0%, 100%);
-  --secondary-text-color: hsl(0, 0%, 60%);
-  --element-background-color: hsl(224, 46%, 17%);
-  --element-background-color-shadow: hsl(210, 42%, 17%);
-  --button-color-green: hsl(140, 49%, 48%);
-  --button-color-green-hover: hsl(100, 49%, 48%);
-  --button-color-red: hsl(0, 49%, 48%);
+  --main-text-color: 
+;
 }
 
 * {
@@ -19,13 +12,13 @@
 }
 
 button {
+  background: none;
   border: none;
   padding: 0;
   font: inherit;
   cursor: pointer;
   outline: inherit;
-  background-color: --button-color-green;
-  color: --primary-text-color;
+  color: white;
   font-size: 15rem;
   height: 28px;
   width: 55px;
@@ -33,7 +26,7 @@ button {
 }
 
 html, body {
-  font-size: --root-font-size;
+  font-size: 1px;
   width: 100%;
   height: 100%;
 }
@@ -43,7 +36,7 @@ body {
   display: grid;
   -ms-grid-rows: 12% 88%;
       grid-template-rows: 12% 88%;
-  background-color: --body-background-color;
+  background-color: #13192b;
 }
 
 header {
@@ -70,13 +63,13 @@ header .header-element:last-child {
 
 header .header-element__new-arduino-button {
   width: 100px !important;
-  background-color: --button-color-green;
+  background-color: #3FB859;
 }
 
 header .header-element__new-arduino-button:hover {
   -webkit-transition: all 100ms;
   transition: all 100ms;
-  background-color: --button-color-green-hover;
+  background-color: #4ea160;
 }
 
 .overview {
@@ -106,15 +99,15 @@ header .header-element__new-arduino-button:hover {
   width: 100px;
   height: 100px;
   border-radius: 10%;
-  background-color: --element-background-color;
+  background-color: #182341;
   -webkit-box-shadow: 5px 1px 24px -5px rgba(0, 0, 0, 0.75);
           box-shadow: 5px 1px 24px -5px rgba(0, 0, 0, 0.75);
-  color: --primary-text-color;
+  color: white;
 }
 
 .overview-header .overview-header__element .overview-header__element--title {
   font-size: 11rem;
-  color: var(--secondary-text-color);
+  color: #919191;
 }
 
 .overview-header .overview-header__element .overview-header__element--value {
@@ -124,7 +117,7 @@ header .header-element__new-arduino-button:hover {
 
 .overview-header .overview-header__element .overview-header__element--trend {
   font-size: 11rem;
-  color: var(--button-color-green);
+  color: #3FB859;
 }
 
 .overview-header .overview-header__element:hover {
@@ -137,7 +130,7 @@ header .header-element__new-arduino-button:hover {
 
 .arduino-table {
   grid: 2/1;
-  background-color: #17223f;
+  background-color: #182341;
   width: 900px;
   height: 400px;
   -webkit-box-shadow: 5px 1px 24px -5px rgba(0, 0, 0, 0.75);
@@ -196,7 +189,7 @@ header .header-element__new-arduino-button:hover {
   height: 10%;
   width: 100%;
   padding: 3%;
-  background-color: #17223f;
+  background-color: #182341;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -214,14 +207,14 @@ header .header-element__new-arduino-button:hover {
 }
 
 .arduino-elements .arduino-element--header .arduino-element--header-element-button-delete {
-  background-color: var(--button-color-red);
+  background-color: #eb3434;
 }
 
 .arduino-elements .arduino-element--body {
   height: 90%;
   width: 100%;
   padding: 3%;
-  background-color: #17223f;
+  background-color: #182341;
   border-radius: 0 0 15px 15px;
 }
 
@@ -236,7 +229,7 @@ header .header-element__new-arduino-button:hover {
 }
 
 .new-arduino-menu {
-  background-color: white;
+  background-color: #ffffff;
   position: absolute;
   display: none;
   width: 350px;
@@ -292,7 +285,7 @@ header .header-element__new-arduino-button:hover {
 
 .new-arduino-menu .new-arduino-menu__body form .form-element label {
   font-size: 15rem;
-  color: #5e5e5e;
+  color: #5f5f5f;
 }
 
 .new-arduino-menu .new-arduino-menu__body form .form-element input {
@@ -311,7 +304,7 @@ header .header-element__new-arduino-button:hover {
 
 .new-arduino-menu .new-arduino-menu__body form .form-token p {
   font-size: 20rem;
-  color: var(--button-color-green);
+  color: #3FB859;
 }
 
 .new-arduino-menu .new-arduino-menu__body form .form-token button {
@@ -333,7 +326,7 @@ header .header-element__new-arduino-button:hover {
 
 .new-arduino-menu .new-arduino-menu__body form .form-submit button {
   width: 130px !important;
-  background-color: var(--body-background-color);
+  background-color: #3FB859;
 }
 
 .dashboard-info {
