--- a/views/setup.html
+++ b/views/setup.html
@@ -10,17 +10,17 @@
     </head>
     <body>
 
-        <div class="login-menu">
+        <div class="setup-menu">
 
-            <form class="login-form" method="POST" action="/login">
+            <form class="setup-form" method="POST" action="/login">
                 
                 <div class="form-element form-header">
-                    <h1>Login</h1>
+                    <h1>Setup</h1>
                 </div>
 
                 <div class="form-element">
                     <label class="form-element__label">E-Mail Adresse</label>
-                    <input name="username" class="form-element__input form-element__input--username" type="text" required>
+                    <input name="username" class="form-element__input form-element__input--email" type="text" required>
                 </div>
                 
                 <div class="form-element">
@@ -35,7 +35,7 @@
 
                 <div class="form-element">
                     <label class="form-element__label">Google Login</label>
-                    <input name="password" class="form-element__input form-element__input--password" type="password" required >
+                    <input name="password" class="form-element__input form-element__input--password--repeat" type="password" required >
                 </div>
 
                 <div class="form-element form-element-submit">
