--- a/views/source/css/styles.scss
+++ b/views/source/css/styles.scss
@@ -110,7 +110,7 @@ header {
 
         .overview-header__element--title {
             font-size: 11rem;
-            color: 
+            color: white;
         }
 
         .overview-header__element--value {
@@ -345,4 +345,6 @@ header {
     }
 
 }
+
+
 
