--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,20 +12,24 @@
 
         <div class="login-menu">
 
-            <form class="login-form" method="POST" action="/login">
+            <form class="login-form form-displayblock" method="POST" action="/login" style="display: block;">
                 
                 <div class="form-element form-header">
                     <h1>Login</h1>
                 </div>
 
                 <div class="form-element">
-                    <label class="form-element__label">Username</label>
-                    <input name="username" class="form-element__input form-element__input--username" type="text" required>
+                    <button type="button" class="form-element__reset-password">Passwort vergessen</button>
                 </div>
                 
-                <div class="form-element">
+                <div class="form-element form-element__email">
+                    <label class="form-element__label">E-Mail</label>
+                    <input name="username" class="form-element__input form-element__input--username" type="text">
+                </div>
+                
+                <div class="form-element form-element__password">
                     <label class="form-element__label">Password</label>
-                    <input name="password" class="form-element__input form-element__input--password" type="password" required >
+                    <input name="password" class="form-element__input form-element__input--password" type="password">
                 </div>
 
                 <% if(message != undefined) { %> 
@@ -37,15 +41,34 @@
                 </div>
                 <% } %> 
                 
-
                 <div class="form-element form-element-submit">
                     <button type="submit" class="form-element__submit-button">Login</button>
+                </div>
+            </form>
+
+            <form class="password-reset-form form-displaynone" method="POST" action="/login/reset" style="display: none;">
+                
+                <div class="form-element form-header">
+                    <h1>Passwort vergessen</h1>
+                </div>
+
+                <div class="form-element">
+                    <button type="Button" class="form-element__backtologin-button">Zurück zum Login</button>
+                </div>
+                
+                <div class="form-element form-element__email">
+                    <label class="form-element__label">E-Mail</label>
+                    <input name="username" class="form-element__input form-element__input--username" type="text">
+                </div>
+                
+                <div class="form-element form-element-submit">
+                    <button type="submit" class="form-element__submit-button">Passwort zurücksetzen</button>
                 </div>
 
             </form>
 
         </div>
         
-        <script src="" async defer></script>
+        <script src="/script/login.js" async defer></script>
     </body>
 </html>
