--- a/views/source/css/login-styles.css
+++ b/views/source/css/login-styles.css
@@ -13,7 +13,7 @@ button {
   font: inherit;
   cursor: pointer;
   outline: inherit;
-  color: white;
+  color: black;
   font-size: 1rem;
   height: 28px;
   width: 55px;
@@ -111,5 +111,10 @@ body {
     height: 100%;
     width: 100%;
   }
+}
+
+.form-element__backtologin-button {
+  width: 100px !important;
+  background-color: #3FB859;
 }
 /*# sourceMappingURL=login-styles.css.map */
