--- a/views/source/css/login-styles.scss
+++ b/views/source/css/login-styles.scss
@@ -13,7 +13,7 @@ button {
 	cursor: pointer;
 	outline: inherit;
 
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 1rem;
     height: 28px;
     width: 55px;
@@ -83,17 +83,13 @@ body {
             .form-element-submit {
                 background-color: red;
             }
-
         }
 
         .form-element__submit-button {
             width: 100px !important;
             background-color: #3FB859;
         }
-
-
     }
-
 }
 
 @media only screen and (max-width: 400px) {
@@ -101,4 +97,9 @@ body {
         height: 100%;
         width: 100%;
     }
+}
+
+.form-element__backtologin-button {
+    width: 100px !important;
+    background-color: #3FB859;
 }
