--- a/views/source/css/styles.css
+++ b/views/source/css/styles.css
@@ -1,3 +1,14 @@
+:root {
+  --root-font-size: 1px;
+  --body-background-color: hsl(225, 39%, 12%);
+  --primary-text-color: hsl(0, 0%, 100%);
+  --secondary-text-color: hsl(0, 0%, 60%);
+  --element-background-color: hsl(224, 46%, 17%);
+  --element-background-color-shadow: hsl(210, 42%, 17%);
+  --button-color-green: hsl(140, 49%, 48%);
+  --button-color-green-hover: hsl(100, 49%, 48%);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -7,13 +18,13 @@
 }
 
 button {
-  background: none;
   border: none;
   padding: 0;
   font: inherit;
   cursor: pointer;
   outline: inherit;
-  color: white;
+  background-color: --button-color-green;
+  color: --primary-text-color;
   font-size: 15rem;
   height: 28px;
   width: 55px;
@@ -21,7 +32,7 @@ button {
 }
 
 html, body {
-  font-size: 1px;
+  font-size: --root-font-size;
   width: 100%;
   height: 100%;
 }
@@ -31,7 +42,7 @@ body {
   display: grid;
   -ms-grid-rows: 12% 88%;
       grid-template-rows: 12% 88%;
-  background-color: #13192b;
+  background-color: --body-background-color;
 }
 
 header {
@@ -58,13 +69,13 @@ header .header-element:last-child {
 
 header .header-element__new-arduino-button {
   width: 100px !important;
-  background-color: #3FB859;
+  background-color: --button-color-green;
 }
 
 header .header-element__new-arduino-button:hover {
   -webkit-transition: all 100ms;
   transition: all 100ms;
-  background-color: #4ea160;
+  background-color: --button-color-green-hover;
 }
 
 .overview {
@@ -94,15 +105,15 @@ header .header-element__new-arduino-button:hover {
   width: 100px;
   height: 100px;
   border-radius: 10%;
-  background-color: #182341;
+  background-color: --element-background-color;
   -webkit-box-shadow: 5px 1px 24px -5px rgba(0, 0, 0, 0.75);
           box-shadow: 5px 1px 24px -5px rgba(0, 0, 0, 0.75);
-  color: white;
+  color: --primary-text-color;
 }
 
 .overview-header .overview-header__element .overview-header__element--title {
   font-size: 11rem;
-  color: #919191;
+  color: white;
 }
 
 .overview-header .overview-header__element .overview-header__element--value {
@@ -112,7 +123,7 @@ header .header-element__new-arduino-button:hover {
 
 .overview-header .overview-header__element .overview-header__element--trend {
   font-size: 11rem;
-  color: #3FB859;
+  color: #3eb658;
 }
 
 .overview-header .overview-header__element:hover {
@@ -125,7 +136,7 @@ header .header-element__new-arduino-button:hover {
 
 .arduino-table {
   grid: 2/1;
-  background-color: #182341;
+  background-color: #17223f;
   width: 900px;
   height: 400px;
   -webkit-box-shadow: 5px 1px 24px -5px rgba(0, 0, 0, 0.75);
@@ -184,7 +195,7 @@ header .header-element__new-arduino-button:hover {
   height: 10%;
   width: 100%;
   padding: 3%;
-  background-color: #182341;
+  background-color: #17223f;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -202,14 +213,14 @@ header .header-element__new-arduino-button:hover {
 }
 
 .arduino-elements .arduino-element--header .arduino-element--header-element-button-delete {
-  background-color: #eb3434;
+  background-color: #eb3333;
 }
 
 .arduino-elements .arduino-element--body {
   height: 90%;
   width: 100%;
   padding: 3%;
-  background-color: #182341;
+  background-color: #17223f;
   border-radius: 0 0 15px 15px;
 }
 
@@ -224,7 +235,7 @@ header .header-element__new-arduino-button:hover {
 }
 
 .new-arduino-menu {
-  background-color: #ffffff;
+  background-color: white;
   position: absolute;
   display: none;
   width: 350px;
@@ -280,7 +291,7 @@ header .header-element__new-arduino-button:hover {
 
 .new-arduino-menu .new-arduino-menu__body form .form-element label {
   font-size: 15rem;
-  color: #5f5f5f;
+  color: #5e5e5e;
 }
 
 .new-arduino-menu .new-arduino-menu__body form .form-element input {
@@ -299,7 +310,7 @@ header .header-element__new-arduino-button:hover {
 
 .new-arduino-menu .new-arduino-menu__body form .form-token p {
   font-size: 20rem;
-  color: #3FB859;
+  color: #3eb658;
 }
 
 .new-arduino-menu .new-arduino-menu__body form .form-token button {
@@ -321,7 +332,7 @@ header .header-element__new-arduino-button:hover {
 
 .new-arduino-menu .new-arduino-menu__body form .form-submit button {
   width: 130px !important;
-  background-color: #3FB859;
+  background-color: #3eb658;
 }
 
 .dashboard-info {
@@ -341,17 +352,17 @@ header .header-element__new-arduino-button:hover {
   font-size: 15rem;
   overflow: hidden;
   width: 100%;
-  height: 90%;
+  height: 85%;
   background-color: #ff7b00;
   border-radius: 0;
 }
 
 .dashboard-info .dashboard-info__status {
   width: 100%;
-  height: 10%;
+  height: 15%;
   overflow: hidden;
   grid-row-start: 2/2;
-  background-color: #3FB859;
+  background-color: #ff7b00;
   border-radius: 0 0 10px 10px;
   -webkit-animation-name: animateLoading;
           animation-name: animateLoading;
