--- a/source/css/styles.scss
+++ b/source/css/styles.scss
@@ -1,5 +1,5 @@
 :root {
-    --root-font-size: 1px;
+    --root-font-size: 10px;
 
     //Body-Background
     --body-background-color: hsl(225, 39%, 12%);
@@ -32,9 +32,9 @@ button {
 	cursor: pointer;
 	outline: inherit;
 
-    background-color: --button-color-green;
+    background-color: var(--button-color-green);
 
-    color: --primary-text-color;
+    color: var(--primary-text-color);
     font-size: 15rem;
     height: 28px;
     width: 55px;
@@ -42,7 +42,7 @@ button {
 }
 
 html, body {
-    font-size: --root-font-size;
+    font-size: 1px;
     width: 100%;
     height: 100%;
 }
@@ -51,7 +51,7 @@ body {
     display: grid;
     grid-template-rows: 12% 88%; //Grösse Header und grösse Overview
 
-    background-color: --body-background-color;
+    background-color: var(--body-background-color);
 }
 
 header {
@@ -74,11 +74,11 @@ header {
 
     .header-element__new-arduino-button {
         width: 100px !important;
-        background-color: --button-color-green;
+        background-color: var(--button-color-green);
 
         &:hover {
             transition: all 100ms;
-            background-color: --button-color-green-hover;
+            background-color: var(--button-color-green-hover);
         }
     }
 }
@@ -103,14 +103,14 @@ header {
         width: 100px;
         height: 100px;
         border-radius: 10%;
-        background-color: --element-background-color;
+        background-color: var(--element-background-color);
         box-shadow: 5px 1px 24px -5px rgba(0,0,0,0.75);
 
-        color: --primary-text-color;
+        color: var(--primary-text-color);
 
         .overview-header__element--title {
             font-size: 11rem;
-            color: 
+            color: white;
         }
 
         .overview-header__element--value {
@@ -345,4 +345,6 @@ header {
     }
 
 }
+
+
 
