--- a/source/css/login-setup-styles.css
+++ b/source/css/login-setup-styles.css
@@ -67,7 +67,7 @@ body {
   height: 20rem !important;
 }
 
-.login-menu {
+.login-menu, .setup-menu {
   background-color: #ffffff;
   width: 35.2rem;
   height: 39.2rem;
@@ -86,7 +86,7 @@ body {
           align-items: center;
 }
 
-.login-menu form {
+.login-menu form, .setup-menu form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -99,13 +99,13 @@ body {
           align-items: center;
 }
 
-.login-menu form .form-header {
+.login-menu form .form-header, .setup-menu form .form-header {
   font-size: 1.2rem;
   padding-top: 2.5rem;
   color: black;
 }
 
-.login-menu form .form-element {
+.login-menu form .form-element, .setup-menu form .form-element {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -119,58 +119,83 @@ body {
   margin: 2.2rem 0px;
 }
 
-.login-menu form .form-element .form-element__label {
+.login-menu form .form-element .form-element__label, .setup-menu form .form-element .form-element__label {
   color: black;
   font-size: 1.3rem;
   font-weight: bold;
 }
 
-.login-menu form .form-element .form-element__input {
+.login-menu form .form-element .form-element__input, .setup-menu form .form-element .form-element__input {
   background-color: #E7E7E7;
   padding: 0.5rem;
   width: 26.8rem;
   height: 4.8rem;
   border: none;
   border-radius: 0.2rem;
+  font-size: 2rem;
 }
 
-.login-menu form .form-element .form-element__input:focus {
+.login-menu form .form-element .form-element__input:focus, .setup-menu form .form-element .form-element__input:focus {
   font-size: 2rem;
   border-bottom: 0.2rem solid #306ECA;
   background-color: rgba(185, 185, 185, 0.643);
   outline: none;
 }
 
-.login-menu form .form-element:last-child {
+.login-menu form .form-element:last-child, .setup-menu form .form-element:last-child {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
-.login-menu form .form-element__reset-password {
+.login-menu form .form-element-message, .setup-menu form .form-element-message {
+  margin: 0 !important;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.login-menu form .form-secondary-button, .setup-menu form .form-secondary-button {
   width: 12rem;
   color: #989898;
   font-size: 1.3rem;
 }
 
-.login-menu form .form-element__reset-password:hover {
+.login-menu form .form-secondary-button:hover, .setup-menu form .form-secondary-button:hover {
   color: #306ECA;
 }
 
-.login-menu form .form-element__backtologin-button {
+.login-menu form .form-element__reset-password, .setup-menu form .form-element__reset-password {
   width: 12rem;
   color: #989898;
   font-size: 1.3rem;
 }
 
-.login-menu form .form-element__backtologin-button:hover {
+.login-menu form .form-element__reset-password:hover, .setup-menu form .form-element__reset-password:hover {
   color: #306ECA;
 }
 
-@media only screen and (max-width: 400px) {
+.login-menu form .form-element__backtologin-button, .setup-menu form .form-element__backtologin-button {
+  width: 12rem;
+  color: #989898;
+  font-size: 1.3rem;
+}
+
+.login-menu form .form-element__backtologin-button:hover, .setup-menu form .form-element__backtologin-button:hover {
+  color: #306ECA;
+}
+
+.setup-menu {
+  height: 45rem;
+}
+
+.setup-menu .form-element {
+  margin: 1.2rem 0px !important;
+}
+
+@media only screen and (max-width: 600px) {
   .login-menu {
     height: 100%;
     width: 100%;
   }
 }
-/*# sourceMappingURL=login-styles.css.map */
+/*# sourceMappingURL=login-setup-styles.css.map */
