--- a/source/css/login-setup-styles.scss
+++ b/source/css/login-setup-styles.scss
@@ -58,7 +58,7 @@ body {
     height: 20rem !important;
 }
 
-.login-menu {
+.login-menu, .setup-menu {
     background-color: #ffffff;
     width: 35.2rem;
     height: 39.2rem;
@@ -100,6 +100,7 @@ body {
                 height: 4.8rem;
                 border: none;
                 border-radius: 0.2rem;
+                font-size: 2rem;
                 
                 &:focus {
                     font-size: 2rem;
@@ -111,6 +112,22 @@ body {
 
             &:last-child {
                 align-items: center;
+            }
+        }
+
+        .form-element-message {
+            margin: 0 !important;
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+
+        .form-secondary-button {
+                        width: 12rem;
+            color: #989898;
+            font-size: 1.3rem;
+
+            &:hover {
+                color: #306ECA;
             }
         }
 
@@ -136,7 +153,15 @@ body {
     }
 }
 
-@media only screen and (max-width: 400px) {
+.setup-menu {
+    height: 45rem;
+
+    .form-element {
+        margin: 1.2rem 0px !important;
+    }
+}
+
+@media only screen and (max-width: 600px) {
     .login-menu {
         height: 100%;
         width: 100%;
