--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
         <title>Arduino Dashboard</title>
         <meta name="description" content="Dashboard für Arduino API">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="/css/login.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="preconnect" href="https://fonts.googleapis.com">
