E-Mail Reset Feature

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -107,7 +107,7 @@
             </div>
 
             <div class="new-arduino-menu__body">
-                <form class="new-arduino-menu__forms" method="POST">
+                <form class="new-arduino-menu__forms">
                     <div class="form-element form-name">
                         <label for="name">Name</label>
                         <input name="name" class="new-arduino-menu__forms-name" type="text" required>
@@ -124,7 +124,7 @@
                     </div>
 
                     <div class="form-element form-config-download">
-                        <button class="new-arduino-menu__forms--downloadconfig" type="button">Config herunterladen</p>
+                        <a href="http://127.0.0.1:3000/api/ardunio/config/download" class="new-arduino-menu__forms--downloadconfig" type="link">Config herunterladen</a>
                     </div>
 
                     <div class="form-element form-submit">
