--- a/new/views/index.html
+++ b/new/views/index.html
@@ -6,11 +6,7 @@
         <title>Arduino Dashboard</title>
         <meta name="description" content="Dashboard für Arduino API">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/login.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet" href="./source/css/login.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@600&display=swap" rel="stylesheet"> 
     </head>
     <body>
@@ -148,6 +144,6 @@
 
         </div>
 
-        <script src="/script/index.js" async defer></script>
+        <script src="./source/script/index.js" async defer></script>
     </body>
 </html>
