--- a/new/views/login.html
+++ b/new/views/login.html
@@ -6,7 +6,7 @@
         <title>Ardunio Login</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/login.css">
+        <link rel="stylesheet" href="./source/css/login.css">
     </head>
     <body>
 
@@ -91,6 +91,6 @@
 
         </div>
         
-        <script src="/script/login.js" async defer></script>
+        <script src="./source/script/login.js" async defer></script>
     </body>
 </html>
