--- a/new/views/register.html
+++ b/new/views/register.html
@@ -6,7 +6,7 @@
         <title>Ardunio Login</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="./source/css/styles.css">
     </head>
     <body>
 
@@ -62,6 +62,6 @@
             </form>
         </div>
         
-        <script src="/script/register.js" async defer></script>
+        <script src="./source/script/register.js" async defer></script>
     </body>
 </html>
