--- a/new/views/reset.html
+++ b/new/views/reset.html
@@ -14,6 +14,6 @@
             <button type="submit">Change Password</button>
         </form>
         
-        <script src="/reset.js" async defer></script>
+        <script src="./source/script/reset.js" async defer></script>
     </body>
 </html>
