--- a/frontend/source/css/styles.css
+++ b/frontend/source/css/styles.css
@@ -5,7 +5,7 @@
   --secondary-text-color: hsl(0, 0%, 60%);
   --element-background-color: hsl(224, 46%, 17%);
   --element-background-color-shadow: hsl(210, 42%, 17%);
-  --button-color-green: hsl(140, 49%, 48%);
+  --button-color-green: rgb(62, 182, 102);
   --button-color-green-hover: hsl(100, 49%, 48%);
 }
 
@@ -350,7 +350,6 @@ header .header-element__new-arduino-button:hover {
   font-weight: bold;
   text-align: center;
   font-size: 15rem;
-  overflow: hidden;
   width: 100%;
   height: 85%;
   background-color: #ff7b00;
@@ -360,7 +359,6 @@ header .header-element__new-arduino-button:hover {
 .dashboard-info .dashboard-info__status {
   width: 100%;
   height: 15%;
-  overflow: hidden;
   grid-row-start: 2/2;
   background-color: #ff7b00;
   border-radius: 0 0 10px 10px;
@@ -386,5 +384,20 @@ header .header-element__new-arduino-button:hover {
   to {
     width: 100%;
   }
+}
+
+.confirm-ardunio-delete {
+  position: absolute;
+  background-color: white;
+  width: 200px;
+  height: 200px;
+  top: 30%;
+  left: 50%;
+  z-index: 999;
+}
+
+.confirm-ardunio-delete form {
+  width: 100%;
+  height: 100%;
 }
 /*# sourceMappingURL=styles.css.map */
