--- a/frontend/source/css/styles.scss
+++ b/frontend/source/css/styles.scss
@@ -214,8 +214,6 @@ header {
 
         border-radius: 0 0 15px 15px;
     }    
-
-
 }
 
 //Hiermit wird der Hintergrund grau, sobald das Menü zum hinzufügen eines neuen Arduino geöffnet wird
@@ -321,7 +319,6 @@ header {
         font-weight: bold;
         text-align: center;
         font-size: 15rem;
-        overflow: hidden;
         width: 100%;
         height: 85%;
         background-color: #ff7b00;
@@ -331,7 +328,6 @@ header {
     .dashboard-info__status {
         width: 100%;
         height: 15%;
-        overflow: hidden;
         grid-row-start: 2/2;
         background-color: #ff7b00;
         border-radius: 0 0 10px 10px;
@@ -346,5 +342,17 @@ header {
 
 }
 
+.confirm-ardunio-delete {
+    position: absolute;
+    background-color: white;
+    width: 200px;
+    height: 200px;
+    top: 30%;
+    left: 50%;
+    z-index: 999;
 
-
+    form {
+        width: 100%;
+        height: 100%;
+    }
+}
